--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,5 +1,7 @@
 // Ionic Variables and Theming. For more info, please see:
 // http://ionicframework.com/docs/v2/theming/
+
+
 $font-path: "../assets/fonts";
 
 @import "ionic.globals";
@@ -24,11 +26,33 @@ $font-path: "../assets/fonts";
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
+  primary:    #424242,
+  secondary:  #fcd736,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  accent:     #202020,
+  dark:       #222222,
+  favorite:   #69BB7B,
+  // Button Twitter
+  twitter:(
+    base: #64B5F6,
+    contrast: #fff
+  ),
+  // Button Facebook
+  facebook:(
+    base: #3949ab,
+    contrast: #fff
+  ),
+  // Button Google
+  google:(
+    base: #bf360c,
+    contrast: #fff
+  ),
+  // Button Pinterest
+  pinterest:(
+    base: #ff3d00,
+    contrast: #fff
+  ),
 );
 
 
@@ -62,13 +86,27 @@ $colors: (
 
 @import "ionic.theme.default";
 
+// App Animation
+// --------------------------------------------------
+@import "animate";
+
+// App Main Sass
+// --------------------------------------------------
+@import "main";
+
 
 // Ionicons
 // --------------------------------------------------
 // The premium icon font for Ionic. For more info, please see:
 // http://ionicframework.com/docs/v2/ionicons/
 
-@import "ionic.ionicons";
+// // App Fontelo Style
+//--------------------------------------------------
+@import "fontello";
+
+@import "ionicons";
+
+
 
 
 // Fonts
