css and images for questionaire

--- a/src/pages/question/question.scss
+++ b/src/pages/question/question.scss
@@ -40,8 +40,15 @@ page-question {
   }
 
   [wizard-title] {
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: whitesmoke;
     z-index: 2;
     position: relative;
+  }
+  [wizard-body-text] {
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: whitesmoke;
+
   }
 
   .swiper-pagination {
