--- a/src/pages/question/question.scss
+++ b/src/pages/question/question.scss
@@ -35,9 +35,16 @@ page-question {
   }
 
   ion-slides {
-    height: 75%;
+    height: 60%;
     margin-top: 20px;
   }
+
+    ion-slide {
+    background-size: 100% 100%;
+    background-repeat:no-repeat;
+  }
+
+  
 
   [wizard-title] {
     -webkit-text-stroke-width: 1px;
