adding profile info

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -13,6 +13,8 @@ $font-path: "../assets/fonts";
 // http://ionicframework.com/docs/v2/theming/overriding-ionic-variables/
 
 
+$background-color	: #f9f4d6;
+  $background: linear-gradient(red, yellow); 
 
 
 // Named Color Variables
