--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,3 +1,47 @@
 page-profile {
 
+    margin: 0;
+    padding: 0;
+    border: 0;
+
+    .personal-info {
+        height: 40%;
+        width: 100%;
+        img {
+            border-radius: 50%;
+            height: 80%;
+            width: auto;
+            margin: 0 auto;
+        }
+    }
+    .stats-header{
+        height: 10%;
+    }
+    
+    .stats-content {
+        height: 50%;
+        #skills {
+            background-color: #efc3b9;
+        }
+        #experiences {
+            background-color: #d3f2ba;
+        }
+        #friends {
+            background-color: #f0b9f0;
+        }
+        #activities {
+            background-color: #b9f1ef;
+        }
+        ion-grid{
+            height : 100%;
+            ion-row {
+                height : 100%;
+                ion-col {
+                    padding-top: 40px;
+                    height: 50%;
+                }
+
+            }
+        }
+    }
 }
