--- a/src/pages/question/question.scss
+++ b/src/pages/question/question.scss
@@ -48,15 +48,14 @@ page-question {
   
 
   [wizard-title] {
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: whitesmoke;
+color: white;
     z-index: 2;
     position: relative;
   }
   [wizard-body-text] {
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: whitesmoke;
-
+        z-index: 2;
+color: white;
+ position: relative;
   }
 
   .swiper-pagination {
