--- a/mobile/src/pages/personality/personality.scss
+++ b/mobile/src/pages/personality/personality.scss
@@ -2,4 +2,7 @@ page-personality {
  .your-class.slide-deck{
         max-height: 90%;
     }
+    .scroll-content{
+        background-color: unset !important;
+    }
 }
