--- a/mobile/src/pages/career/career.scss
+++ b/mobile/src/pages/career/career.scss
@@ -20,7 +20,7 @@ page-career {
         height: 3.6rem;
         position: absolute;
         right: 10px;
-        bottom: 10px;
+        top: 10px;
       }
   
       [item-title] {
@@ -42,7 +42,7 @@ page-career {
       -webkit-transition: all 100ms;
       transition: all 100ms;
       overflow: hidden;
-      background-color: theme-colors('mainColors', 'secondary') ;
+      background-color: whitesmoke ;
       &.active {
         height: 100% !important;
       }
