--- a/mobile/src/pages/qualifications/qualifications.scss
+++ b/mobile/src/pages/qualifications/qualifications.scss
@@ -1,3 +1,48 @@
 page-qualifications {
-
+    li[margin] {
+        margin: 5px 10px;
+      }
+      [item-bcg] {
+        position: relative;
+        background-color: #f9f4d6 !important;
+        .item-inner {
+          padding: 0;
+        }
+        [default-button] {
+          padding: 0 1.1em;
+          height: 3.6rem;
+          position: absolute;
+          right: 10px;
+          top: 10px;
+        }
+      }
+      [icon-small] {
+        font-size: icon-size('icon-small') !important;
+        color: theme-colors('mainColors', 'accent') !important;
+      }
+      .item-accordion {
+        width: 100%;
+        height: 0;
+        display: block !important;
+        -webkit-transition: all 100ms;
+        transition: all 100ms;
+        overflow: hidden;
+        &.active {
+          height: 100% !important;
+        }
+        background-color: #f9f4d6 !important;
+        #moreinfo{background-color: theme-colors('mainColors', 'secondary') !important;}
+        ion-item {
+          border-radius: $border-radius !important;
+          margin-bottom: 5px;
+          min-height: 35px;
+          display: block;
+    
+        }
+    
+    
+        ion-label {
+          margin: 0;
+        }
+      }
 }
